--- a/.example.env
+++ b/.example.env
@@ -6,7 +6,8 @@ RABBITMQ_EXCHANGE=
 RABBITMQ_PREFIX=
 RABBITMQ_TTL=5s
 
-AWS_ELASTICSEARCH_HOST=
-AWS_ELASTICSEARCH_PREFIX=
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_FILE_VERSION=
+ELASTICSEARCH_DATAPOINT_VERSION=
 
 WEBAPP_URL=
