add api secret key when call api

--- a/.example.env
+++ b/.example.env
@@ -2,7 +2,7 @@ PORT=3008
 MONGODB_URI=
 MONGODB_TTL=5s
 RABBITMQ_URI=amqp://rabbitmq
-RABBITMQ_EXCHANGE=
+RABBITMQ_QUEUE=
 RABBITMQ_PREFIX=
 RABBITMQ_TTL=5s
 
