--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "amqplib": "0.5.2",
-    "bcrypt": "3.0.2",
+    "bcryptjs": "2.4.3",
     "elasticsearch": "15.2.0",
     "http-status-codes": "1.3.0",
     "isarray": "2.0.4",
