--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "amqplib": "0.5.2",
     "bcryptjs": "2.4.3",
+    "delay": "4.1.0",
     "elasticsearch": "15.2.0",
     "http-status-codes": "1.3.0",
     "isarray": "2.0.4",
