--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "8.0.4",
     "run.env": "1.1.0",
     "serverless": "1.33.2",
+    "serverless-nested-stack": "0.0.7",
     "serverless-offline": "3.31.3",
     "serverless-webpack": "5.2.0",
     "webpack": "4.26.0",
