--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "amqplib": "0.5.2",
     "bcryptjs": "2.4.3",
     "elasticsearch": "15.2.0",
+    "escape-string-regexp": "1.0.5",
     "http-status-codes": "1.3.0",
     "isarray": "2.0.4",
     "joi": "14.3.0",
