update project api check valid domain & protocol. get project now return domain & protocol.

--- a/document/api-docs.yml
+++ b/document/api-docs.yml
@@ -198,6 +198,10 @@ components:
         createdAt:
           type: string
           format: date-time
+        domain:
+          type: string
+        protocol:
+          type: boolean
     Preset:
       type: object
       properties:
